# the-janitor

./: .INNOVATION_LOG.md  .cursorrules  .gitignore  .mailmap  .pre-commit-config.yaml  404.html  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_INVERSION.md  CNAME  Cargo.toml  Dockerfile  LEGACY_HANDOVER.md  LICENSE  README.md  RELEASE.md  RISK_REPORT.md  SECURITY.md  SELF_AUDIT.md  SOVEREIGN.md  SOVEREIGN_BRIEFING.md  SOVEREIGN_OPERATOR.md  action.yml  demo.tape  deny.toml  flake.nix  godot_complete_inventory.csv  godot_final_audit.md  godot_live_pr_audit.md  index.html  janitor.toml  justfile  kubernetes_live_pr_audit.md  market_valuation_report.json  mcp-manifest.json  mkdocs.yml  premium_audit_report_old1.json  premium_audit_report_old2.json  premium_audit_report_old3.json  premium_audit_report_old4.json  (+11 more)
.agent_governance/: README.md
.claude/: commands  rules  skills
.github/: dependabot.yml
CHANGELOG/: index.html
ENTERPRISE_GAPS/: index.html
IMPLEMENTATION_BACKLOG/: index.html
INNOVATION_LOG/: index.html
LAUNCH_CHECKLIST/: index.html
OMNI_COVERAGE_GAPS/: index.html
PREMIUM_LOGIC/: index.html
R_AND_D_ROADMAP/: index.html
TROUBLESHOOTING/: index.html
architecture/: index.html
assets/: godot_full_audit.csv  godot_veto_report.json  nixpkgs_full_audit.csv
benchmarks/: index.html
brain_audit/: index.html
crates/anatomist/: Cargo.toml  janitor.cdx.json
crates/anatomist/src/: bridge.rs  gh_workflow.rs  graph.rs  imports.rs  induce.rs  lib.rs  manifest.rs  mesh_topology.rs  parser.rs  path_util.rs  pipeline.rs  scan.rs  wisdom.rs
crates/anatomist/src/heuristics/: mod.rs  pytest.rs
crates/anatomist/src/languages/: mod.rs  nix.rs
crates/cli/: Cargo.toml  build.rs  janitor.cdx.json
crates/cli/src/: campaign_ingest.rs  cbom.rs  ci_telemetry.rs  daemon.rs  esg_ledger.rs  export.rs  git_drive.rs  hunt.rs  jira.rs  main.rs  report.rs  sarif_enterprise.rs  verify_asset.rs  warg_client.rs
crates/common/: Cargo.toml  janitor.cdx.json
crates/common/src/: bloom.rs  deps.rs  lib.rs  license.rs  physarum.rs  policy.rs  pqc.rs  receipt.rs  registry.rs  scan_state.rs  scm.rs  slop.rs  surface.rs  taint.rs  wasm_receipt.rs  wisdom.rs
crates/crucible/: Cargo.toml  janitor.cdx.json
crates/crucible/fixtures/: mock_rule.wat
crates/crucible/fixtures/exhaustion/: seed_deeply_nested_braces
crates/crucible/src/: main.rs
crates/dashboard/: Cargo.toml  janitor.cdx.json
crates/dashboard/src/: lib.rs  wopr_view.rs
crates/experimental/advanced_threats/: Cargo.toml  janitor.cdx.json
crates/experimental/advanced_threats/src/: binary_hunter.rs  blast_radius.rs  lib.rs  lotl_hunter.rs  unicode_gate.rs  yggdrasil.rs
crates/experimental/advanced_threats/tests/: matrix_isolation.rs  unicode_lotl_isolation.rs
crates/experimental/phantom_ffi_gate/: Cargo.toml
crates/experimental/phantom_ffi_gate/src/: evaluator.rs  extractor.rs  lib.rs  registry.rs  veto.rs
crates/experimental/phantom_ffi_gate/tests/: phantom_ffi_isolation.rs
crates/forge/: Cargo.toml  janitor.cdx.json
crates/forge/src/: adapter_kotlin.rs  adapter_scala.rs  adapter_swift.rs  agentic_graph.rs  agentic_tool_audit.rs  agnostic_shield.rs  ast_adapter.rs  authz.rs  authz_propagation.rs  bayesian_taint.rs  binary_recovery.rs  brain.rs  callgraph.rs  campaign.rs  ci_thermodynamics.rs  config_taint.rs  crypto_protocol.rs  cst_diff.rs  dedup.rs  deobfuscate.rs  exploitability.rs  federated_memory.rs  ffi_taint.rs  financial_pii.rs  fold.rs  frontend_state.rs  gadgets.rs  git_sig.rs  governance.rs  hashing.rs  idor.rs  ifds.rs  intent_divergence.rs  invisible_payload.rs  kani_bridge.rs  labyrinth.rs  legacy_c_mining.rs  lib.rs  library_identity.rs  memory_bomb.rs  (+31 more)
crates/fuzz/: Cargo.toml  janitor.cdx.json
crates/fuzz/fuzz_targets/: ast_bomb.rs
crates/fuzz/src/: lib.rs
crates/gov/: Cargo.toml  janitor.cdx.json
crates/gov/src/: ebpf_sensor.rs  main.rs
crates/include_deflator/: Cargo.toml  janitor.cdx.json
crates/include_deflator/src/: graph.rs  lib.rs
crates/include_deflator/tests/: integration.rs
crates/include_deflator/tests/fixtures/base/: error_macros.h  math_utils.h  physics.cpp  renderer.cpp
crates/include_deflator/tests/fixtures/pr/: error_macros.h  math_utils.h  physics.cpp
crates/lazarus/: Cargo.toml
crates/lazarus/src/: lib.rs
crates/mcp/: Cargo.toml  janitor.cdx.json
crates/mcp/src/: lib.rs
crates/polyglot/: Cargo.toml  janitor.cdx.json
crates/polyglot/src/: lib.rs
crates/reaper/: Cargo.toml  janitor.cdx.json
crates/reaper/src/: audit.rs  lib.rs  otlp.rs  safe_delete.rs  test_fingerprint.rs
dedup_audit_report/: index.html
discovery/: index.html
docs/: CHANGELOG.md  CNAME  ENTERPRISE_GAPS.md  IMPLEMENTATION_BACKLOG.md  INNOVATION_LOG.md  LAUNCH_CHECKLIST.md  OMNI_COVERAGE_GAPS.md  R_AND_D_ROADMAP.md  architecture.md  benchmarks.md  discovery.md  energy_conservation_audit.md  fips_boundary.md  godot_slop_audit.md  governance.md  index.md  intelligence.md  licensing.md  manifesto.md  marketplace-listing.md  onboarding.md  pricing.md  pricing_faq.md  privacy.md  safety.md  security.md  sentinel-setup.md  setup.md  slop-hunter.md  terms.md  ultimate_gauntlet_results.md
energy_conservation_audit/: index.html
fips_boundary/: index.html
godot_slop_audit/: index.html
governance/: index.html
governor_design/: index.html
infrastructure/: index.html
intelligence/: index.html
licensing/: index.html
manifesto/: index.html
marketplace-listing/: index.html
performance_fix_proposal/: index.html
premium/: index.html
pricing/: index.html
pricing_faq/: index.html
privacy/: index.html
safety/: index.html
search/: search_index.json
security/: index.html
self_heal_plan/: index.html
sentinel-setup/: index.html
setup/: index.html
slop-hunter/: index.html
src/: lib.rs  (+1 more)
tools/gauntlet-runner/: Cargo.toml  janitor.cdx.json
tools/gauntlet-runner/src/: main.rs
tools/mint-token/: Cargo.toml  janitor.cdx.json
tools/mint-token/src/: main.rs
tools/wisdom-bake/: Cargo.toml  janitor.cdx.json
tools/wisdom-bake/src/: main.rs
(+166 files in other folders)
