[workspace]
members = ["crates/*", "tools/wisdom-bake", "tools/mint-token"]
resolver = "2"

[workspace.package]
version = "6.1.9"
edition = "2021"
repository = "https://github.com/GhrammR/the-janitor"
license = "BUSL-1.1"

[workspace.dependencies]
# Core
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }

# Cryptography
blake3 = "1.5"

# Serialization (Zero-Copy)
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
bytecheck = { version = "0.8", default-features = false }
thiserror = "2.0"

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.23"
tree-sitter-glsl = "0.2.0"
tree-sitter-objc = "3.0.2"

# File System & Path Utilities
memmap2 = "0.9"
dunce = "1.0"
walkdir = "2.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Graph
petgraph = "0.7"

# String matching
aho-corasick = "1.1"

# JSON / hashing utilities
serde_json = "1.0"
sha2 = "0.10"

# HTTP client (sync, used for remote audit attestation)
ureq = { version = "2", features = ["json"] }

# Progress reporting
indicatif = "0.17"

[profile.release]
# Size-first: tree-sitter grammar tables dominate binary weight.
# opt-level "z" + LTO together eliminate dead parse tables and LLVM IR bloat.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
