[workspace]
members = [
    "crates/*",
    "crates/experimental/advanced_threats",
    "crates/experimental/backlog_pruner",
    "tools/wisdom-bake",
    "tools/mint-token",
    "tools/parallel-bounce",
    "tools/gauntlet-runner",
]
exclude = ["crates/experimental"]
resolver = "2"

[workspace.package]
version = "10.1.0-alpha.17"
edition = "2021"
repository = "https://github.com/janitor-security/the-janitor"
license = "BUSL-1.1"
rust-version = "1.91"

[workspace.dependencies]
# Core
tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "io-util", "io-std", "net", "signal", "sync", "time"] }
sysinfo = "0.38"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10", features = ["v4"] }
libfuzzer-sys = "0.4"

# Cryptography
blake3 = "1.5"
hmac = "0.13.0"
ed25519-dalek = "2.1"
hex = "0.4"

# Serialization (Zero-Copy)
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
bytecheck = { version = "0.8", default-features = false }
thiserror = "2.0"
bloom = "0.3.2"
bitvec = "1.0"

# Parsing
tree-sitter = "0.26"
tree-sitter-rust = "0.24.2"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-c = "0.24.1"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-go = "0.25.0"
tree-sitter-glsl = "0.2.0"
tree-sitter-objc = "3.0.2"
tree-sitter-yaml = "0.7.2"
tree-sitter-bash = "0.25.1"
tree-sitter-scala = "0.25.0"
tree-sitter-ruby = "0.23"
tree-sitter-php = "0.24"
tree-sitter-swift = "0.7"
tree-sitter-lua = "0.5"
# tree-sitter-dockerfile = "0.2" — REJECTED: exports old language() fn API, incompatible with ts 0.26
tree-sitter-hcl = "1.1.0"
tree-sitter-nix = "0.3.0"
tree-sitter-gdscript = "6.1.0"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-zig = "1.1.2"

# File System & Path Utilities
memmap2 = "0.9"
dunce = "1.0"
walkdir = "2.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Graph
petgraph = "0.7"

# String matching
aho-corasick = "1.1"

# Arena allocator (bump allocation for zero-global-alloc hot paths)
bumpalo = { version = "3", features = ["collections"] }

# JSON / hashing utilities
sha2 = "0.11.0"
flate2 = "1.0"
toml = "1.0"
semver = "1.0"

# HTTP client (sync, used for remote audit attestation)
ureq = { version = "3", features = ["json", "rustls"] }
rustls = "0.23"
rustls-pemfile = "2"

# Post-quantum cryptography — ML-DSA-65 (FIPS 204) for BYOK local attestation
fips204 = "0.4"
fips205 = "0.4.1"

# Base64 encoding for PQC signature serialization
base64 = "0.22"

# Secure memory zeroization — wipe key material from RAM immediately after use.
# `derive` feature enables #[derive(Zeroize, ZeroizeOnDrop)] on key structs.
zeroize = { version = "1", features = ["derive"] }

# Lock-free atomic reference counting
arc-swap = "1.7"

# Wasm sandbox — BYOP (Bring Your Own Policy) custom rule execution
# Cranelift JIT + WAT text-format parsing. Default features retained so all
# required runtime types are available; LTO in the release profile strips
# unreachable code paths, controlling the final binary footprint.
wasmtime = { version = "43.0.0", features = ["cranelift", "wat"] }

# Git integration (C binding to libgit2 — requires libgit2-dev in build env)
git2 = "0.20"

# Data parallelism
rayon = "1.10"

# ZIP archive extraction — OSV bulk corpus download (in-memory, no temp files)
zip = "2"

# File-system watch — SBOM drift daemon (inotify/kqueue via OS-native backend)
notify = "6.1"

# Progress reporting
indicatif = "0.17"

[profile.release]
# Size-first: tree-sitter grammar tables dominate binary weight.
# opt-level "z" + LTO together eliminate dead parse tables and LLVM IR bloat.
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
