[package]
name = "anatomist"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
forge = { path = "../forge" }
rkyv.workspace = true
bytecheck.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-glsl.workspace = true
tree-sitter-objc.workspace = true
memmap2.workspace = true
dunce.workspace = true
petgraph.workspace = true
walkdir.workspace = true
aho-corasick.workspace = true
