[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "janitor"
path = "src/main.rs"

[dependencies]
anatomist = { path = "../anatomist" }
forge = { path = "../forge" }
polyglot = { path = "../polyglot" }
mcp = { path = "../mcp" }
shadow = { path = "../shadow" }
common = { path = "../common" }
reaper = { path = "../reaper" }
vault = { path = "../vault" }
dashboard = { path = "../dashboard" }
arc-swap.workspace = true
memmap2.workspace = true
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
clap.workspace = true
tokio.workspace = true
walkdir.workspace = true
anyhow.workspace = true
dotenvy = "0.15"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
blake3.workspace = true
indicatif.workspace = true
ureq.workspace = true
