[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "janitor"
path = "src/main.rs"

[dependencies]
anatomist = { path = "../anatomist" }
forge = { path = "../forge" }
polyglot = { path = "../polyglot" }
mcp = { path = "../mcp" }
shadow = { path = "../shadow" }
common = { path = "../common" }
reaper = { path = "../reaper" }
vault = { path = "../vault" }
dashboard = { path = "../dashboard" }
advanced_threats = { path = "../experimental/advanced_threats" }
include_deflator = { path = "../include_deflator" }
arc-swap.workspace = true
memmap2.workspace = true
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
clap.workspace = true
tokio.workspace = true
walkdir.workspace = true
anyhow.workspace = true
dotenvy = "0.15"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_yaml.workspace = true
blake3.workspace = true
hmac.workspace = true
sha2.workspace = true
indicatif.workspace = true
ureq.workspace = true
rustls-pemfile.workspace = true
csv = "1.3"
git2.workspace = true
rayon.workspace = true
uuid = { workspace = true }
fips204.workspace = true
fips205.workspace = true
base64.workspace = true
hex.workspace = true
ed25519-dalek.workspace = true
zip.workspace = true
notify.workspace = true
tempfile = "3"
flate2 = "1"
tar = "0.4"
plist = "1"
jaq-core = "3"
jaq-json = { version = "2", features = ["serde"] }
jaq-std = "3"
opentelemetry.workspace = true
opentelemetry-otlp.workspace = true

[build-dependencies]
common = { path = "../common" }
rkyv = { version = "0.8", features = ["std", "bytecheck"] }

[dev-dependencies]
tempfile = "3"
serial_test.workspace = true
