[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
# Core Logic
rkyv = { version = "0.8", features = ["std", "bytecheck", "uuid-1"] }
bytecheck = { version = "0.8", default-features = false }

serde = { version = "1.0", features = ["derive"] }

# Types
uuid = { version = "1.10", features = ["v4", "serde"] }
bitflags = "2.6"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Disk I/O
memmap2.workspace = true
dunce.workspace = true