[package]
name = "common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core Logic
rkyv = { version = "0.8", features = ["std", "bytecheck"] }
bytecheck = { version = "0.8", default-features = false }

serde = { version = "1.0", features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
semver.workspace = true

# Types
bitflags = "2.6"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Disk I/O
memmap2.workspace = true
dunce.workspace = true

# Checksum (registry integrity)
blake3.workspace = true
bloom.workspace = true
bitvec.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
fips204.workspace = true
fips205.workspace = true

# Secure key material zeroization (PQC private key bundles)
zeroize.workspace = true

# System introspection (Physarum Protocol memory backpressure)
sysinfo.workspace = true
