[package]
name = "crucible"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Threat Gallery regression harness — deterministic intercept validation for every active detector"
publish = false

[[bin]]
name = "crucible"
path = "src/main.rs"

[dependencies]
forge = { path = "../forge" }
