[package]
name = "dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
common = { path = "../common" }
include_deflator = { path = "../experimental/include_deflator" }
serde_json.workspace = true
