[package]
name = "forge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
common = { path = "../common" }
blake3.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-glsl.workspace = true
anyhow.workspace = true
thiserror.workspace = true
