[package]
name = "forge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
common = { path = "../common" }
backlog_pruner = { path = "../experimental/backlog_pruner" }
advanced_threats = { path = "../experimental/advanced_threats" }
blake3.workspace = true
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-glsl.workspace = true
tree-sitter-objc.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-kotlin-ng.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-nix.workspace = true
tree-sitter-gdscript.workspace = true
tree-sitter-hcl.workspace = true
tree-sitter-zig.workspace = true
arc-swap.workspace = true
git2.workspace = true
rkyv.workspace = true
bytecheck.workspace = true
memmap2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
aho-corasick.workspace = true
petgraph.workspace = true
fixedbitset = "0.5"
smallvec = "1.13"
ena = "0.14"
zstd = "0.13"
wasmtime.workspace = true
serde_json.workspace = true
base64.workspace = true
rsmt2 = "0.16"

[dev-dependencies]
tempfile = "3"
fips204 = { workspace = true }
serial_test.workspace = true
