[package]
name = "janitor-gov"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "janitor-gov"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
blake3.workspace = true
common = { path = "../common" }
ed25519-dalek.workspace = true
serde.workspace = true
serde_json.workspace = true
