[package]
name = "janitor-gov"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "janitor-gov"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.6", features = ["json"] }
base64.workspace = true
common = { path = "../common" }
dashmap = "6.1"
ed25519-dalek.workspace = true
hex.workspace = true
hmac.workspace = true
jsonwebtoken = "9"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
