[package]
name = "lazarus"
version = "5.4.0"
edition = "2021"

[dev-dependencies]
tempfile = "3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
aho-corasick = "1.1"
common = { path = "../common" }
