[package]
name = "lazarus"
version = "5.9.5"
edition = "2021"
license = "BUSL-1.1"

[dev-dependencies]
tempfile = "3"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
anyhow = "1.0"
thiserror = "1.0"
aho-corasick = "1.1"
common = { path = "../common" }
