[package]
name = "lazarus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
tempfile = "3"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
flate2 = "1.0"
anyhow.workspace = true
thiserror = "1.0"
aho-corasick.workspace = true
common = { path = "../common" }
