[package]
name = "mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anatomist = { path = "../anatomist" }
common = { path = "../common" }
forge = { path = "../forge" }
vault = { path = "../vault" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
