[package]
name = "polyglot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-cpp.workspace = true
tree-sitter-c.workspace = true
tree-sitter-java.workspace = true
tree-sitter-c-sharp.workspace = true
tree-sitter-go.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-glsl.workspace = true
tree-sitter-objc.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-scala.workspace = true
tree-sitter-ruby.workspace = true
tree-sitter-php.workspace = true
tree-sitter-swift.workspace = true
tree-sitter-lua.workspace = true
tree-sitter-hcl.workspace = true
tree-sitter-nix.workspace = true
tree-sitter-gdscript.workspace = true
tree-sitter-kotlin-ng.workspace = true
