[package]
name = "reaper"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aho-corasick.workspace = true
memmap2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
ureq.workspace = true
flate2.workspace = true

[dev-dependencies]
tempfile = "3"
