[package]
name = "wisdom-bake"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rkyv = { version = "0.8", features = ["std"] }
walkdir.workspace = true
anyhow.workspace = true
common = { path = "../../crates/common" }
